# affiliate-marketing-automation

./: .gitignore  AGENTS.md  agent.md  main.py  pyproject.toml
.poolside/: settings.local.yaml
scripts/: classify_articles.py  yahoo_news_scraper.py
