[project]
name = "scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scrapling[all]>=0.4.9",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]


[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "T201",
  "COM812",
  "ISC001",
  "D415",
  "RUF002",
  "RUF003",
  "DTZ007",
]
unfixable = [
  "F401",
  "F841",
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D",
  "S101",
  "N802",
  "ARG",
]

[tool.ruff.lint.pylint]
max-args = 6


[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportAttributeAccessIssue = false
reportAny = false
